Add support for tolgee endpoint /single-step-import
Summary: Ref T11223

Reviewers: siepkes

Reviewed By: siepkes

Tags: #tolgee, #feature

Maniphest Tasks: T11223

Differential Revision: https://phabricator.serviceplanet.nl/D5556